[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-pyspec-utils"
version = "0.1.0"
description = "Rust acceleration library for Ethereum execution and consensus specs"
authors = [
    { name = "Felipe Selmo", email = "fselmo2@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rust_pyspec_utils"